fix incremental message synchronization
